tests/parser/bad/exps/exp_t-cid-with.scilexp
None (Bool) (* should be braces *)
